# hdata

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
hdata/: __init__.py  force_validation.py  functions.py  models.py
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_hdata.py
usage/: index.html
