[tool]
[tool.poetry]
name = "hdata"
version = "0.10.0"
homepage = "https://github.com/judahcooper/hdata"
description = "Interacting with the HyperData API."
authors = ["Judah Cooper <judah@hyperdata.network>"]
readme = "README.md"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "hdata" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

black  = "*"
isort  =  "*"
flake8  =  "*"
flake8-docstrings =  "*"
mypy = "*"
pytest  = "*"
pytest-cov  =  "*"
tox  = "*"
virtualenv  = "*"
pip  = "*"
mkdocs  =  "*"
mkdocs-include-markdown-plugin  = "*"
mkdocs-material  = "*"
mkdocstrings  = "0.16.0"
mkdocs-material-extensions  = "*"
twine  =  "*"
mkdocs-autorefs = "*"
pre-commit = "*"
toml = "*"
bump2version = "*"
pandas = "*"
pyarrow = "*"
requests = "*"
numpy = "*"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
